--- a/src/styles/scss/panels/_header-panel.scss
+++ b/src/styles/scss/panels/_header-panel.scss
@@ -13,10 +13,6 @@ $block: 'header-panel';
 		padding-bottom: 3rem;
 		padding-top: 3rem;
 
-		@include media-min(md) {
-			padding-top: 16rem;
-		}
-
 		svg {
 			fill: $white;
 		}
